# cribar

./: .dir-locals.el  Makefile.am  README  autogen.sh  configure.ac  taller.txt
po/: POTFILES.in
src/: Makefile.am  cribar-application-window.c  cribar-application-window.h  cribar-application.c  cribar-application.h  cribar-main.c
tests/: Makefile.am  cribar_launching.feature  cribar_organize.feature  environment.py
tests/steps/: cribar_launching.py  cribar_organize.py
